# service-design

./: .gitignore  Cargo.toml  README.md  diesel.toml  example.config.toml
crates/libs/errors/: Cargo.toml
crates/libs/errors/src/: lib.rs
crates/libs/helpers/: Cargo.toml
crates/libs/helpers/src/: lib.rs
crates/libs/helpers/src/auth_jwt/: auth.rs
crates/libs/helpers/src/validations/: mail_token.rs  mod.rs  validations.rs
crates/libs/kafka/: Cargo.toml
crates/libs/kafka/src/: channel.rs  lib.rs  models.rs  setup.rs
crates/libs/lib_config/: Cargo.toml
crates/libs/lib_config/src/: lib.rs
crates/libs/lib_config/src/config/: configuration.rs
crates/libs/lib_config/src/db/: db.rs
crates/libs/lib_config/src/send_mail/: send.rs
crates/libs/lib_config/src/session/: redis.rs
crates/libs/middleware/: Cargo.toml
crates/libs/middleware/src/: jwt.rs
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: telemetry.rs
crates/services/admin_service/: .env  Cargo.toml  diesel.toml
crates/services/admin_service/migrations/2025-01-22-045647_create_admin_table/: up.sql
crates/services/admin_service/migrations/2025-01-22-050311_alter_admin_table/: down.sql  up.sql
crates/services/admin_service/migrations/2025-01-27-050520_create_users_table/: up.sql
crates/services/admin_service/migrations/2025-02-05-071641_add_modified_field/: down.sql  up.sql
crates/services/admin_service/migrations/2025-02-05-073143_create_user_events_table/: down.sql  up.sql
crates/services/admin_service/migrations/2025-02-05-093748_alter_user_events_table/: down.sql  up.sql
crates/services/admin_service/migrations/2025-02-06-055203_rename_admin_table_constraints/: down.sql  up.sql
crates/services/admin_service/src/: db_error.rs  kafka_handler.rs  lib.rs  main.rs  schema.rs  startup.rs
crates/services/admin_service/src/routes/: health_check.rs  mod.rs
crates/services/admin_service/src/routes/admin/: crud.rs  mod.rs  model.rs  user.rs  validate_user.rs
crates/services/admin_service/src/routes/games/: games.rs  mod.rs  models.rs
crates/services/api_gateway/: Cargo.toml
crates/services/api_gateway/src/: main.rs
crates/services/game_service/: .env  Cargo.toml  diesel.toml
crates/services/game_service/migrations/2025-01-28-043850_create_games/: up.sql
crates/services/game_service/migrations/2025-01-28-070014_create_games/: down.sql  up.sql
crates/services/game_service/migrations/2025-01-28-074231_alter_rate_games/: down.sql  up.sql
crates/services/game_service/migrations/2025-02-06-062134_rename_rate_game_table_constraints/: down.sql  up.sql
crates/services/game_service/src/: db_error.rs  elasticsearch.rs  kafka_handler.rs  lib.rs  main.rs  schema.rs  startup.rs
crates/services/game_service/src/routes/: health_check.rs  mod.rs
crates/services/game_service/src/routes/game/: games.rs  mod.rs  model.rs
crates/services/user_service/: Cargo.toml  diesel.toml
crates/services/user_service/migrations/2025-01-21-053238_create_users/: up.sql
crates/services/user_service/migrations/2025-02-05-054041_add_modified_field/: down.sql
crates/services/user_service/migrations/2025-02-05-103554_create_email_verifications/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-043849_alter_email_verifications/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-053945_rename_user_table_constraints/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-055822_alter_email_verifications/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-061448_alter_email_verifications_status/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-074518_update_email_verifications_status_enum/: down.sql  up.sql
crates/services/user_service/migrations/2025-02-06-075417_update_email_verifications_status_enum_not_null/: down.sql  up.sql
crates/services/user_service/src/: db_errors.rs  kafka_handler.rs  lib.rs  main.rs  schema.rs  session_state.rs  startup.rs
crates/services/user_service/src/routes/: health_check.rs
crates/services/user_service/src/routes/user/: crud.rs  mod.rs  model.rs  response.rs  validate_user.rs
scripts/: docker-compose.yml  init.sql  start.sh
scripts/elasticsearch/: docker-compose.yml
