[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[dependencies]

lib_config = { path = "../../libs/lib_config" }
chrono = { version= "0.4.38", features = ["serde"]}
serde = { version = "1.0.210", features = ["derive"] }
jsonwebtoken = "9.3.0"
regex = "1.10.6"
unicode-segmentation = "1.12.0"
claim = "0.5.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"