[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11.1"
rdkafka = "0.37.0"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.137"
tracing = "0.1.41"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "rt"] }
futures = "0.3.31"
uuid = {version= "1.10.0", features=["v4", "serde"]}
chrono = { version= "0.4.38", features = ["serde"]}

[dev-dependencies]
lib_config = { path = "../lib_config/" }
