[package]
name = "lib_config"
version = "0.1.0"
edition = "2021"

[dependencies]

diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
diesel={version="2.0", features= ["postgres","r2d2"]}
config = "0.11"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["full"] } 
deadpool-redis = "0.9.0"                 
redis = { version = "0.21.7", features = ["tokio", "aio"] }
tokio-native-tls = "0.3"    
uuid = {version= "1.10.0", features=["v4", "serde"]}
errors = { path = "../errors/" }
anyhow = { workspace = true }
