[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-actix-web = "0.7.13"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "rt"] }