[package]
name = "api_gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
utils = { path = "../../libs/utils" }
lib_config = { path = "../../libs/lib_config" }
helpers = { path = "../../libs/helpers" }
errors = { path = "../../libs/errors" }
middleware = { path = "../../libs/middleware" }

actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
reqwest = { version = "0.11", features = ["json"] }
tracing-actix-web = "0.7.13"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "rt"] }
config = "0.11"
serde = { version = "1.0.210", features = ["derive"] }
uuid = {version= "1.10.0", features=["v4", "serde"]}
serde_json = "1.0.128"
tracing = { version = "0.1.40", features = ["log"] }
cookie = "0.15"