[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel={version="2.0", features= ["postgres","r2d2", "uuid"]}
dotenv = "0.15"
utils = { path = "../../libs/utils" }
lib_config = { path = "../../libs/lib_config" }
helpers = { path = "../../libs/helpers" }
errors = { path = "../../libs/errors" }
middleware = { path = "../../libs/middleware" }

actix-web = "4.9.0"
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
actix-web-lab = "0.22.0"
tracing-actix-web = "0.7.13"
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread", "rt"] }
config = "0.11"
serde = { version = "1.0.210", features = ["derive"] }
uuid = {version= "1.10.0", features=["v4", "serde"]}
chrono = { version= "0.4.38", features = ["serde"]}
serde_json = "1.0.128"
tracing = { version = "0.1.40", features = ["log"] }
argon2 = { version = "0.5.3", features = ["std"] }
rand = "0.8.5"